--- a/blocks/page.css
+++ b/blocks/page.css
@@ -23,7 +23,7 @@
     padding: 0 16px;
   }
   .page__section {
-    max-width: 288px;
+    max-width: 6px;
   }
 }
 
